Fixed Add Modal Launcher not showing after adding Navigation

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 
 ::-webkit-scrollbar {
-  width: 20px;
+  width: 10px;
 }
 
 /* Track */
@@ -11,13 +11,13 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #ff0000;
-  border-radius: 10px;
+  background: #f50057;
+  border-radius: 5px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #b30000;
+  background: #a30025;
 }
 
 
